improved stats
