# internal/delivery/api/handlers/stats.go
@@ -14,6 +14,7 @@ import (
 // @Tags         Stats
 // @Produce      json
 // @Security     BearerAuth
+// @Param        period query string false "Period"
 // @Success      200 {object} query.GetStatsView
 // @Failure      401 {object} apierr.Response
 // @Router       /stats/summary [get]
@@ -26,8 +27,13 @@ func (h *Handlers) GetStats(c *gin.Context) {
 		return
 	}
 
+	period := c.Query("period")
+	if period == "" {
+		period = "month"
+	}
+
 	var response *query.GetStatsView
-	response, err := h.TransactionsUsecase.Query.GetStats(ctx, userID)
+	response, err := h.TransactionsUsecase.Query.GetStats(ctx, userID, period)
 	if err != nil {
 		apierr.Handle(c, err)
 		return
